--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@
 #main img{
     opacity: 0;
     scale: 0.8;
-    transition: all 300ms;
+    transition-duration: 400ms;
+    transition-property: opacity, scale;
 }
 
 #main img.shown{
@@ -57,7 +58,8 @@
     /*Code for scroll observer*/
     /* opacity: 0; */
     scale: 0.9;
-    transition: 400ms;
+    transition-duration: 400ms;
+    transition-property: opacity, scale;
     /* transition-timing-function: cubic-bezier(0.18, 0.89, 0.43, 1.4); */
 }
 
@@ -86,7 +88,8 @@
     /*Code for scroll observer*/
     /* opacity: 0; */
     scale: 0.9;
-    transition: 400ms;
+    transition-duration: 400ms;
+    transition-property: opacity, scale;
     /* transition-timing-function: cubic-bezier(0.18, 0.89, 0.43, 1.4); */
 }
 
@@ -290,7 +293,8 @@ span.incode {
     /*Code for scroll observer*/
     /* opacity: 0; */
     scale: 0.9;
-    transition: 400ms;
+    transition-duration: 400ms;
+    transition-property: opacity, scale;
     /* transition-timing-function: cubic-bezier(0.18, 0.89, 0.43, 1.4); */
 }
 #main p.note.shown{
